# isekai

./: .gitignore  .gitmodules  .travis.yml  LICENSE  Makefile  README.md  run-pi-test  shard.yml
lib/libproof/: Cargo.toml  libproof.cr
lib/libproof/src/: bp.rs  lib.rs  utils.rs
lib/libsnarc/: CMakeLists.txt  libsnarc.cr
lib/libsnarc/src/: CircuitReader.cpp  CircuitReader.hpp  Util.cpp  Util.hpp  cwrapper.cpp  cwrapper.h  libsnark_wrapper.cpp  libsnark_wrapper.hpp  r1cs_libiop.cpp  r1cs_libiop.hpp  r1cs_utils.cpp  r1cs_utils.hpp  skAurora.cpp  skAurora.hpp  skFractal.cpp  skFractal.hpp  skLigero.cpp  skLigero.hpp
src/: dfg.cr  (+14 more)
tests/backend/: .gitignore  CMakeLists.txt  cfile.hpp  circuit_reader.hpp  common.hpp  judge.cpp  rng.cpp  test-cmp-num-lines  test-runner  test-stress  value_list_reader.hpp
tests/backend/testcases/add_1000/: prog.c
tests/backend/testcases/add_3/: 02_negative.in
tests/backend/testcases/add_const/: 03_negative_result.in
tests/backend/testcases/bit_and_3/: prog.c
tests/backend/testcases/bit_not/: prog.c
tests/backend/testcases/bit_or_3/: 03_min_zero.in  06_random.in  07_random.in  08_random.in  prog.c
tests/backend/testcases/bit_xor_1000/: 02_random.in  03_random.in
tests/backend/testcases/collapsing/: prog.c
tests/backend/testcases/cond/: 01_true.in  03_min.in  04_one.in  prog.c
tests/backend/testcases/const_bit_or/: 04_negative.in  prog.c
tests/backend/testcases/const_lt/: prog.c
tests/backend/testcases/crc32/: 01_random.in  prog.c  table_gen.c
tests/backend/testcases/div_64/: 02_neg_neg.in  03_neg_pos.in  04_pos_neg.in  05_zero_pos.in  06_zero_neg.in  07_random.in  08_random.in  prog.c
tests/backend/testcases/dyn_arr_ind/: 01_random.in  prog.c
tests/backend/testcases/eq/: 01_simple.in  03_unsigned_overflow.in  prog.c
tests/backend/testcases/eq_const/: prog.c
tests/backend/testcases/g_hash/: 01.in  prog.cpp
tests/backend/testcases/g_median/: 01_median.in  prog.c
tests/backend/testcases/geq_signed/: 08_neg_greater.in  11_zero_neg.in  prog.c
tests/backend/testcases/get/: prog.c
tests/backend/testcases/gt_signed/: 07_neg_eq.in  12_neg_zero.in  14_zero_pos.in  prog.c
tests/backend/testcases/large/: 04_random.in
tests/backend/testcases/large2/: prog.c
tests/backend/testcases/large3/: 01_random.in  prog.c
tests/backend/testcases/left_shift_split/: 04_large.in  06_negative.in  prog.c
tests/backend/testcases/leq/: 05_half_max.in  06_number_max.in  prog.c
tests/backend/testcases/leq_signed/: 10_pos_neg.in  prog.c
tests/backend/testcases/logical_not/: prog.c
tests/backend/testcases/logical_not_not/: prog.c  test_props.ini
tests/backend/testcases/logical_ops/: 04_00011.in  10_01001.in  25_11000.in  prog.c
tests/backend/testcases/lt/: 02_signed_overflow.in  04_eq.in  05_greater.in  06_minus_two.in
tests/backend/testcases/lt_64/: 01_unsigned_overflow.in  03_less.in  07_minus_three.in  prog.c
tests/backend/testcases/lt_const/: 04_unsigned_max.in
tests/backend/testcases/lt_signed/: 02_intmax_one.in  09_neg_less.in  prog.c
tests/backend/testcases/mul_1000/: prog.c
tests/backend/testcases/mul_3/: 02_negative.in  07_negative_2.in  prog.c
tests/backend/testcases/mul_const/: 04_negative2.in  prog.c
tests/backend/testcases/negate/: prog.c
tests/backend/testcases/neq/: 02_simple2.in  prog.c
tests/backend/testcases/nizk/: prog.c
tests/backend/testcases/ptr_cmp/: prog.c
tests/backend/testcases/ptr_cmp_arr/: prog.cpp
tests/backend/testcases/reg0000/: prog.c
tests/backend/testcases/select_const/: prog.c
tests/backend/testcases/sign_extend/: prog.c
tests/backend/testcases/signed_right_shift/: prog.c
tests_backend/: .gitignore  CMakeLists.txt  cfile.hpp  circuit_reader.hpp  common.hpp  compare-num-lines  main.cpp  old-backend-run-all  old-backend-run-test-case  run-all  run-test-case  runner  src_copy_.c  stress  utils.lib.bash  value_list_reader.hpp
tests_backend/testcases/add_1000/: prog.c.in
tests_backend/testcases/add_3/: 05_overflow.in  prog.c
tests_backend/testcases/add_const/: prog.c
tests_backend/testcases/bit_and_3/: 02_simple2.in  03_negative.in
tests_backend/testcases/bit_not/: 05_negative.in
tests_backend/testcases/bit_or_3/: 05_max.in
tests_backend/testcases/bit_or_const/: 06_const_mul_two.in  prog.c
tests_backend/testcases/bit_xor_1000/: prog.c
tests_backend/testcases/cond/: 01_simple.in
tests_backend/testcases/cond_const_false/: prog.c
tests_backend/testcases/cond_const_true/: prog.c
tests_backend/testcases/const_eq/: prog.c
tests_backend/testcases/const_lt/: prog.c
tests_backend/testcases/const_neq/: prog.c
tests_backend/testcases/eq/: 04_signed_overflow.in  prog.c
tests_backend/testcases/eq_const/: prog.c
tests_backend/testcases/gt/: prog.c
tests_backend/testcases/large/: 02_random.in  03_random.in  prog.c
tests_backend/testcases/left_shift/: prog.c
tests_backend/testcases/logical_ops/: 03_00010.in  07_00110.in  15_01110.in
tests_backend/testcases/lt/: prog.c
tests_backend/testcases/lt_const/: 03_greater.in  prog.c
tests_backend/testcases/mul_3/: 03_underflow.in  05_overflow.in  08_negative_3.in  09_zero.in
tests_backend/testcases/negate/: 06_negative.in
tests_backend/testcases/neq/: prog.c
tests_backend/testcases/neq_const/: prog.c
tests_backend/testcases/sign_extend_const/: prog.c
tests_backend/testcases/signed_right_shift/: test_props.ini
tests_backend/testcases/sub_1000/: 03_random.in
tests_backend/testcases/sub_const/: prog.c
tests_backend/testcases/truncate/: 05_to_nonzero2.in
tests_backend/testcases/zero_extend/: prog.c
tests_backend/tools/: rng.c
(+186 files in other folders)
